--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "superbright website",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-data": "^1.2.1",
