--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "start": "node app"
   },
   "repository": {
     "type": "git",
